[package]
name = "dshot-frame"
description = "Generates frames for the DShot ESC protocol"
authors = ["Robin Schroer <cargo@sulami.xyz>"]
version = "0.1.2"
edition = "2021"
keywords = ["dshot"]
categories = ["aerospace::protocols", "no-std"]
license = "MIT"
repository = "https://github.com/sulami/dshot-frame"
exclude = [".idea"]
